[gd_scene load_steps=5 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://InputUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/godot-camera-plugin.funabab/camera_view.gd" type="Script" id=3]
[ext_resource path="res://phone_camera_controller.gd" type="Script" id=4]

[node name="mainScene" type="Node2D"]

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 254.842, 176.94 )

[node name="InputUI" parent="." instance=ExtResource( 2 )]
position = Vector2( 105.681, 61.0939 )

[node name="phone_camera" type="Control" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="phone_camera_controller" type="Node2D" parent="."]
script = ExtResource( 4 )
phone_camera = NodePath("../phone_camera")

[node name="Sprite" type="Sprite" parent="phone_camera_controller"]

[connection signal="action_pressed" from="InputUI" to="phone_camera_controller" method="_on_InputUI_action_pressed"]
[connection signal="down_pressed" from="InputUI" to="player" method="_on_InputUI_down_pressed"]
[connection signal="down_released" from="InputUI" to="player" method="_on_InputUI_down_released"]
[connection signal="left_pressed" from="InputUI" to="player" method="_on_InputUI_left_pressed"]
[connection signal="left_released" from="InputUI" to="player" method="_on_InputUI_left_released"]
[connection signal="right_pressed" from="InputUI" to="player" method="_on_InputUI_right_pressed"]
[connection signal="right_released" from="InputUI" to="player" method="_on_InputUI_right_released"]
[connection signal="up_pressed" from="InputUI" to="player" method="_on_InputUI_up_pressed"]
[connection signal="up_released" from="InputUI" to="player" method="_on_InputUI_up_released"]
[connection signal="picture_taken" from="phone_camera" to="phone_camera_controller" method="_on_phone_camera_picture_taken"]
